[package]
name = "domain2ip"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
trust-dns = "0.22.0"
trust-dns-resolver = "0.22.0"
